[package]
name = "agentid"
version = "0.1.0"
edition = "2021"
description = "Git identity for AI coding agents"
license = "MIT"
homepage = "https://github.com/beautifulevil/AgentID"
repository = "https://github.com/beautifulevil/AgentID"
readme = "README.md"
keywords = ["git", "github", "agents", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
hostname = "0.4"
open = "5"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
walkdir = "2"
